# city-road-network

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.cfg  vscode.env
city_road_network/: config.py
city_road_network/algo/: common.py  gravity_model.py  naive_sim.py  simulation.py  smarter_sim.py  utils.py
city_road_network/downloaders/: ghsl.py  osm.py  stats.py
city_road_network/files_processing/: osm_parser.py  to_csv.py  to_osm.py  unwind_ways.py
city_road_network/processing/: data_correction.py  ghsl.py  graph.py  zones.py
city_road_network/utils/: io.py  map.py  utils.py
city_road_network/utils/html_templates/: main.html
city_road_network/writers/: color_helpers.py  csv.py  geojson.py  neo4j.py  neo4j_manager.py  postgres.py  sumo.py
example-notebooks/: naive_simulation.ipynb  pg.ipynb  smarter_simulation.ipynb  stats.ipynb  sumo.ipynb
examples/: all_together.ipynb  all_together.py  compare_paths.py  download_data.py  gen_map.py  geojson.py  ghsl.ipynb  gravity_model.ipynb  gravity_model.py  naive_simulation.ipynb  naive_simulation.py  neo.py  new_sim.py  osm.ipynb  pg.py  process_data.ipynb  smarter_simulation.ipynb  smarter_simulation.py  stats.ipynb  stats.py  sumo.ipynb  sumo.py  test_sim.py  zones.ipynb
tests/: algo_test.py  main_test.py
tests/data/: test_old_paths.pkl
