[tool.black]
line-length = 120
target-version = ['py38']
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/venv  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"


[tool.poetry]
name = "osm-to-graph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "city_road_network"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
lxml = "^4.9.2"
black = {extras = ["jupyter"], version = "^23.1.0"}
numpy = "^1.24.2"
pandas = "^1.5.3"
geopy = "^2.3.0"
python-dotenv = "^0.21.1"
pytest = "^7.2.1"
jupyter = "^1.0.0"
isort = "^5.12.0"
seaborn = "^0.12.2"
plotly = "^5.13.1"
osmnx = "^1.3.0"
folium = "^0.14.0"
pyproj = "^3.4.1"
wheel = "^0.40.0"
kaleido = "0.2.1"
scipy = "^1.10.1"
natsort = "^8.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
