[metadata]
name = city-road-network
version = 0.0.1
description = A tool for city road network data downloading.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikita03565/city-road-network
author = Nikita Povaliaev
author_email = nikita03565@gmail.com
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.11.1

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
